Fixing scrollbar in Firefox

--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -9,7 +9,7 @@
     text-align: center;
     background-color: #eaebec;
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
     white-space: nowrap;
     z-index: 1;
     caret-color: transparent;
